# pterm

./: .gitignore  .harper-dictionary.txt  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  selene.toml
.github/: pull_request_template.md
.github/workflows/: claude-code-review.yml  nix-build.yml  release-prep.yml  release.yml  tag-release.yml
docs/: CONFIGURATION.md  DESIGN.md
docs/adr/: 0001-rendering-corruption-mitigations.md
lua/pterm/: init.lua
lua/telescope/_extensions/: pterm.lua
nix/apps/: default.nix
nix/apps/nvim/: pterm.lua
proto/: Cargo.toml
proto/src/: lib.rs
src/: bridge.rs  buffer.rs  constants.rs  main.rs  paths.rs  pty.rs  server.rs  session.rs
