[package]
name = "pterm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "pterm"
path = "src/main.rs"

[dependencies]
pterm-proto = { path = "./proto" }
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "user"] }
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["proto"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
